# tre-regex

./: .gitattributes  .gitignore  .tool-versions  .yarnrc.yml  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  build.rs  index.d.ts  index.js  package.json
.github/workflows/: CI.yml  ci.yml
__test__/: index.spec.ts
benchmark/: bench.ts
src/: lib.rs
