
[package]
authors = ["Oleksii Vasyliev <leopard.not.a+tre@gmail.com>"]
edition = "2021"
name    = "tre_regex"
version = "0.3.1"

[lib]
crate-type = ["cdylib"]

[dependencies]
libc        = "0.2"
napi        = "3.0.0"
napi-derive = "3.0.0"

[build-dependencies]
cc         = "1.2"
napi-build = "2"
sha2       = "0.11"

[profile.release]
lto   = true
strip = "symbols"
